5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1670_1391.log
== SUBMITION (2019-04-16 19:32:56) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(mensagem)
	
-- EXECUTION TIME:
0.169977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/1391/main.py", line 4, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:32:58) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(mensagem)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:37:47) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
contrario= consumo>150*0,75+16
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(mensagem)
else:
	mensagem=(contrario)
	print(mensagem)
	
	
-- EXECUTION TIME:
0.208076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/1391/main.py", line 5, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:37:50) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
contrario= consumo>150*0,75+16
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(mensagem)
else:
	mensagem=(contrario)
	print(mensagem)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:39:33) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
contrario= consumo>150*0,75+16
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(mensagem)
else:
	contrario= consumo*0.75+16
	mensagem=(contrario)
	print(mensagem)
	
	
-- EXECUTION TIME:
0.260195
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/1391/main.py", line 5, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:39:35) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
contrario= consumo>150*0,75+16
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(mensagem)
else:
	contrario= consumo*0.75+16
	mensagem=(contrario)
	print(mensagem)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:40:12) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(mensagem)
else:
	contrario= consumo*0.75+16
	mensagem=(contrario)
	print(mensagem)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:40:20) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(mensagem)
else:
	contrario= consumo*0.75+16
	mensagem=(contrario)
	print(mensagem)
	
	
-- EXECUTION TIME:
0.180855
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/1391/main.py", line 4, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:41:18) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(round(mensagem,2))
else:
	contrario= consumo*0.75+16
	mensagem=(contrario)
	print(round(mensagem,2))
	
	
-- EXECUTION TIME:
0.194983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/1391/main.py", line 4, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:41:21) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(round(mensagem,2))
else:
	contrario= consumo*0.75+16
	mensagem=(contrario)
	print(round(mensagem,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:41:33) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(round(mensagem,2))
else:
	contrario= consumo*0.75+16
	mensagem=(contrario)
	print(round(mensagem,2))
	
	
-- EXECUTION TIME:
0.20269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/1391/main.py", line 4, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:41:34) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
if (consumo<=150):
	a=(tarifa*cosumo+5)
	mensagem=a 
	print(round(mensagem,2))
else:
	contrario= consumo*0.75+16
	mensagem=(contrario)
	print(round(mensagem,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(tarifa*cosumo+5)
NameError: name 'cosumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:41:59) 
-- CODE:
consumo=float(input("digite o numero:"))
tarifa=0.60
if (consumo<=150):
	a=(tarifa*consumo+5)
	mensagem=a 
	print(round(mensagem,2))
else:
	contrario= consumo*0.75+16
	mensagem=(contrario)
	print(round(mensagem,2))
	
	
-- EXECUTION TIME:
0.210649
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
90.2
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
